# de-aigc-ch

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
references/: academic.md  examples.md  phrases.md  structures.md
scripts/: detect.py
